@@ -176,25 +176,19 @@ mapi_export MapiHdl mapi_prepare(Mapi mid, const char *cmd);
 mapi_export MapiMsg mapi_prepare_handle(MapiHdl hdl, const char *cmd);
 mapi_export MapiMsg mapi_virtual_result(MapiHdl hdl, int columns, const char **columnnames, const char **columntypes, const int *columnlengths, int tuplecount, const char ***tuples);
 mapi_export MapiMsg mapi_execute(MapiHdl hdl);
-mapi_export MapiMsg mapi_execute_array(MapiHdl hdl, char **val);
 mapi_export MapiMsg mapi_fetch_reset(MapiHdl hdl);
 mapi_export MapiMsg mapi_finish(MapiHdl hdl);
-mapi_export MapiHdl mapi_prepare_array(Mapi mid, const char *cmd, char **val);
 mapi_export MapiHdl mapi_query(Mapi mid, const char *cmd);
 mapi_export MapiMsg mapi_query_handle(MapiHdl hdl, const char *cmd);
 mapi_export MapiHdl mapi_query_prep(Mapi mid);
 mapi_export MapiMsg mapi_query_part(MapiHdl hdl, const char *cmd, size_t size);
 mapi_export MapiMsg mapi_query_done(MapiHdl hdl);
-mapi_export MapiHdl mapi_quick_query(Mapi mid, const char *cmd, FILE *fd);
-mapi_export MapiHdl mapi_query_array(Mapi mid, const char *cmd, char **val);
-mapi_export MapiHdl mapi_quick_query_array(Mapi mid, const char *cmd, char **val, FILE *fd);
 mapi_export MapiHdl mapi_send(Mapi mid, const char *cmd);
 mapi_export MapiMsg mapi_read_response(MapiHdl hdl);
 mapi_export MapiHdl mapi_stream_query(Mapi mid, const char *cmd, int windowsize);
 mapi_export MapiMsg mapi_cache_limit(Mapi mid, int limit);
 mapi_export MapiMsg mapi_cache_shuffle(MapiHdl hdl, int percentage);
 mapi_export MapiMsg mapi_cache_freeup(MapiHdl hdl, int percentage);
-mapi_export MapiMsg mapi_quick_response(MapiHdl hdl, FILE *fd);
 mapi_export MapiMsg mapi_seek_row(MapiHdl hdl, mapi_int64 rowne, int whence);
 
 mapi_export MapiMsg mapi_timeout(Mapi mid, unsigned int time);
@@ -208,7 +202,6 @@ mapi_export mapi_int64 mapi_rows_affected(MapiHdl hdl);
 mapi_export char *mapi_fetch_field(MapiHdl hdl, int fnr);
 mapi_export size_t mapi_fetch_field_len(MapiHdl hdl, int fnr);
 mapi_export MapiMsg mapi_store_field(MapiHdl hdl, int fnr, int outtype, void *outparam);
-mapi_export char **mapi_fetch_field_array(MapiHdl hdl);
 mapi_export char *mapi_fetch_line(MapiHdl hdl);
 mapi_export int mapi_split_line(MapiHdl hdl);
 mapi_export char *mapi_get_lang(Mapi mid);
